<resources>
    <string name="app_name">Hangeo</string>
    <string name="center_textView">Under Development. . .</string>
    <string name="splash_screen_description">Hangeo under developement splash screen</string>

    <!--PujolsLuis Strings-->
  <!--START OF PLAN DETAILS LAYOUT Strings-->
  <string name="plan_description_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="plan_details_locations_title">Locations</string>
    <string name="plan_details_time_title">Time</string>
    <string name="plan_details_time_value">12:00 AM</string>
    <string name="plan_details_estimated_cost_title">Estimated Cost</string>
    <string name="plan_details_estimated_cost_value">$$$</string>

    <!--START OF MODIFY MAP DETAILS LAYOUT-->
      <string name="plan_details_modify_title">Edit Plan</string>
      <string name="plan_details_modify_date_title">Date:</string>
      <string name="plan_details_modify_date_value">Select Date</string>
      <string name="plan_details_modify_time_title">Time:</string>
      <string name="plan_details_modify_time_value">Select Time</string>
      <string name="plan_details_modify_save_button">Save</string>

    <!--END OF MODIFY MAP DETAILS LAYOUT-->

  <!--END OF PLAN DETAILS LAYOUT Strings-->




    <string name="checkin">Checkin</string>

    <string name="menu_settings">Settings</string>

    <!--Strings of the map activity-->
    <string name="title_activity_maps">Map</string>
    <string name="dropped_pin_text">Dropped Pin</string>
    <string name="button_save_map">Save</string>

    <string name="ok">OK</string>
    <string name="permision_available_location">LOCATION Permission has been granted. You can now use the my locations tool.</string>
    <string name="permission_location_rationale">LOCATION Permission is needed to show the my locations tool.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <!--End of PujolsLuis Strings-->

    <!-- START OF Welcome Screen, Login, Sign Up and Forgot Password layout Strings-->
    <string name="signup_option_string">Can not login? Create an account</string>
    <string name="username_string">Username</string>
    <string name="password_string">Password</string>
    <string name="login_string">Login</string>
    <string name="signup_welcome_screen">SIGN UP</string>
    <string name="login_welcome_screen">LOGIN</string>
    <string name="email_string">Email</string>
    <string name="register_string">Sign Up</string>
    <string name="or">or</string>
    <string name="register_signup_options">Sign up with social sites</string>
    <string name="action_sign_in_short">Sign Up</string>
    <string name="btn_forgot_password">Did you forgot you password?</string>
    <string name="btn_link_to_login">Account already created? Log me in!</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="hint_email">Email</string>
    <string name="hint_user_name">First Name</string>
    <string name="hint_user_lastname">Last Name</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">You\'re not a member yet? Get registered now</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <!--END OF  Welcome Screen, Login, Sign Up and Forgot Password Strings-->


  <!--START OF SPINNER options for create plan screen-->
  <string-array name="planets_array">
    <item>Image 1</item>
    <item>Image 2</item>
    <item>Image 3</item>
    <item>Image 4</item>
    <item>Image 5</item>
    <item>Image 6</item>
    <item>Image 7</item>
  </string-array>
  <!--END OF SPINNER options for create plan screen-->


  <!--START of Under Construction screen strings-->
  <string name="titleUnderCons">Opss!</string>
  <string name="descriptLine1UnderCons">We are sorry but it seems that,</string>
  <string name="descriptLine2UnderCons">this section is </string>
  <string name="descriptLine2UnderConsUnder">underdevelopment.</string>
  <!--END of Under Construction screen strings-->
</resources>
