<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white">


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/linearLayout_SignUp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/progressBar">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo_hangeo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="16dp"
            android:paddingLeft="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:id="@+id/editText_user_first_name"
                    android:hint="@string/hint_user_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:id="@+id/editText_user_last_name"
                    android:hint="@string/hint_user_lastname" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:id="@+id/editText_SignUpLayout_emailInput"
                android:hint="@string/email_string" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:focusableInTouchMode="true"
                android:maxLines="1"
                android:id="@+id/password"
                android:hint="@string/password_string"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <Button
            android:id="@+id/button_SignUpLayout_SignUp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/action_sign_in_short"
            android:textStyle="bold"
            android:backgroundTint="@color/colorAccent"/>

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:gravity="bottom|center"
            android:textColor="@color/colorAccent"
            />

        <Button
            android:id="@+id/button_goToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:gravity="top|center_horizontal"
            android:textSize="16sp"
            android:layout_alignBottom="@id/btn_reset_password"/>

    </LinearLayout>
</RelativeLayout>