<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map_main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            >

            <ImageView
                android:id="@+id/create_plan_imageView"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:foregroundGravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_edit_location_black_48dp"/>

            <TextView
                android:id="@+id/modify_plan_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plan_details_modify_title"
                android:textAllCaps="true"
                android:gravity="center_horizontal"
                android:layout_below="@id/create_plan_imageView"
                android:layout_marginTop="8dp"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"/>

            <LinearLayout
                android:id="@+id/form_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/modify_plan_textView"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/create_plan_name_inputLayout"
                    >
                    <EditText
                        android:id="@+id/modify_plan_name_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Plan Name"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <EditText
                        android:id="@+id/modify_plan_description_textView"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:hint="Description"
                        android:maxLength="140"
                        android:gravity="start"
                        android:textAlignment="textStart"
                        />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="16dp">

                    <LinearLayout
                        android:id="@+id/select_date_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingRight="4dp"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/plan_details_modify_date_title"
                            android:textSize="16sp"
                            android:paddingRight="8dp"/>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/modify_plan_pick_date_inputLayout"
                            >
                            <EditText
                                android:id="@+id/modify_plan_pick_date_editText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/plan_details_modify_date_value"
                                android:textAlignment="center"
                                android:textSize="16sp"
                                />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/select_time_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingRight="4dp"
                        android:layout_weight="1"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/plan_details_modify_time_title"
                            android:textSize="16sp"
                            android:paddingRight="8dp"/>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/create_plan_pick_time_inputLayout"
                            >
                            <EditText
                                android:id="@+id/modify_plan_time_value_editText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/plan_details_modify_time_value"
                                android:textAlignment="center"
                                android:textSize="16sp"
                                />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>
                <Spinner
                    android:id="@+id/modify_plan_chooseImage_spinner_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Spinner>
            </LinearLayout>

            <Button
                android:id="@+id/modify_plan_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="24dp"
                android:text="@string/plan_details_modify_save_button"
                android:backgroundTint="@color/colorAccent"/>


        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_view"/>

</android.support.v4.widget.DrawerLayout>