<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_content_plan_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
                <!--app:layout_scrollFlags="scroll|enterAlways|snap" />    -->

        </android.support.design.widget.AppBarLayout>

        <android.support.constraint.ConstraintLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent" android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="78dp"
                android:layout_height="77dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="88dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_development" />

            <TextView
                android:id="@+id/UnderConsBodyLine1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/descriptLine1UnderCons"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintLeft_toLeftOf="@+id/imageView"
                app:layout_constraintRight_toRightOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/UnderConsTitle"
                tools:text="@string/descriptLine1UnderCons"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/UnderConsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/titleUnderCons"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintLeft_toLeftOf="@+id/imageView"
                app:layout_constraintRight_toRightOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:text="@string/titleUnderCons"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="@+id/imageView"
                app:layout_constraintRight_toRightOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/UnderConsBodyLine1">

                <TextView
                    android:id="@+id/UnderConsBodyLine2FirstPart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/descriptLine2UnderCons"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:layout_editor_absoluteX="150dp"
                    tools:layout_editor_absoluteY="286dp"
                    tools:text="@string/descriptLine2UnderCons" />

                <TextView
                    android:id="@+id/UnderConsBodyLine2SecondPart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:text="@string/descriptLine2UnderConsUnder"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintLeft_toRightOf="@+id/UnderConsBodyLine2FirstPart"
                    app:layout_constraintRight_toRightOf="@+id/UnderConsBodyLine1"
                    app:layout_constraintTop_toBottomOf="@+id/UnderConsBodyLine1"
                    tools:text="@string/descriptLine2UnderConsUnder" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_marginBottom="0dp"
                android:layout_marginRight="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@drawable/logo_hangeo" />

        </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_view"/>
</android.support.v4.widget.DrawerLayout>